--- a/my-app/.github/workflows/deploy.yml
+++ b/my-app/.github/workflows/deploy.yml
@@ -19,16 +19,19 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: './my-app/package-lock.json'
         
     - name: Install dependencies
       run: npm ci
+      working-directory: ./my-app
       
     - name: Build
       run: npm run build
+      working-directory: ./my-app
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        publish_dir: ./my-app/dist
